converted the modal to become mobile-friendly (still needs some work) and deleted current desktop one for subsequent fixing - added in-modal y-scroll feature - all content in single column - fixed summary section style formatting wrapped 'live preview' and 'source-private' icon and text in the a-tag instead

--- a/src/toby-mould/_modal.scss
+++ b/src/toby-mould/_modal.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 $section-background-colours: rgba(0, 0, 0, 0.1);
+
 // //
 // //------------------------------------
 // //--------MIX-INS--------//
@@ -43,16 +44,18 @@ $section-background-colours: rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 80vw;
+  // width: 80vw;
   margin: 0 auto;
+  overflow-y: scroll;
 
   article {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+    height: 100vh;
+    width: 80vw;
+    // display: grid;
+    // grid-template-columns: 1fr;
     background: rgba(255, 255, 255, 0.9);
-    min-width: 20vw;
-    max-height: 90vh;
+    // min-width: 20vw;
+    // max-height: 90vh;
     border-radius: 10px;
     box-shadow: 0 5px 8px 0 rgba(255, 255, 255, 0.3), 0 7px 20px 0 rgba(255, 255, 255, 0.3);
     // background: purple;
@@ -61,7 +64,7 @@ $section-background-colours: rgba(0, 0, 0, 0.1);
       display: flex;
       flex-direction: column;
       justify-content: center;
-      max-width: 25vw;
+      // max-width: 25vw;
       // background: yellow;
 
       #summary {
@@ -69,6 +72,7 @@ $section-background-colours: rgba(0, 0, 0, 0.1);
         @extend %margin-padding;
         // @extend %modal-overview-section-images;
         background: $section-background-colours;
+        // width: 100%;
 
         .image-section {
           position: relative;
@@ -78,8 +82,10 @@ $section-background-colours: rgba(0, 0, 0, 0.1);
           // height: 100px;
 
           .image {
-            height: 150px;
-            min-width: 10vw;
+            width: 100%;
+            // min-height: 90px;
+            // max-height: 150px;
+            // min-width: 10px;
             // max-width: 350px;
             border-radius: 15px;
             cursor: pointer;
@@ -114,16 +120,32 @@ $section-background-colours: rgba(0, 0, 0, 0.1);
         .buttons {
           display: flex;
           align-items: center;
-          justify-content: center;
+          justify-content: space-evenly;
           // background: red;
 
-          i {
-            margin: 0 auto 5px;
+          a {
+            // width: 50%;
+            font-size: 0.5rem;
+            // padding: 5px 10px;
+            // margin-left: 5px;
+            display: flex;
+            // grid-template-columns: 1fr 2fr;
+            // gap-left: 20px;
+            justify-content: center;
+            align-items: center;
+            // background: yellow;
 
-            a {
-              font-size: 0.5rem;
-              padding: 5px 10px;
-              margin-left: 5px;
+            i {
+              margin: 0 10px 0 0;
+              padding: 5px;
+              font-size: 1rem;
+              // display: inline-block;
+              // background: blue;
+            }
+
+            p {
+              padding: 0 5px 0 5px;
+              // background: green;
             }
           }
         }
@@ -142,24 +164,37 @@ $section-background-colours: rgba(0, 0, 0, 0.1);
           display: flex;
           justify-content: center;
           align-items: center;
-          width: 100%;
+          // width: 100%;
           padding-top: 10px;
 
           div {
-            width: 20%;
             height: 10px;
-            background: blue;
 
             &:first-of-type {
-              background: red;
+              background: turquoise;
               border-radius: 20px 0 0 20px;
+              width: 40%;
             }
+
             &:nth-of-type(2) {
+              background: green;
+              width: 30%;
+            }
+
+            &:nth-of-type(3) {
               background: yellow;
+              width: 20%;
+            }
+
+            &:nth-of-type(4) {
+              background: red;
+              width: 10%;
             }
 
             &:last-of-type {
               // background: red;
+              background: blue;
+              width: 20%;
               border-radius: 0 20px 20px 0;
             }
           }
@@ -210,13 +245,16 @@ $section-background-colours: rgba(0, 0, 0, 0.1);
       flex-direction: column;
       justify-content: center;
       min-height: 100%;
-      min-width: 100%;
+      // width: 100%;
+      // margin: 10px;
+      // min-width: 100%;
       // max-width: 55vw;
       // background: red;
 
       #role {
         @extend %margin-padding;
         background: $section-background-colours;
+        // width: 100%;
         // p {
         //   @extend %text-adjust;
         // }
@@ -227,6 +265,8 @@ $section-background-colours: rgba(0, 0, 0, 0.1);
       #diff {
         @extend %margin-padding;
         background: $section-background-colours;
+        // width: 100%;
+
         // p {
         //   @extend %text-adjust;
         // }
@@ -236,6 +276,8 @@ $section-background-colours: rgba(0, 0, 0, 0.1);
       #sol {
         @extend %margin-padding;
         background: $section-background-colours;
+        // width: 100%;
+
         // p {
         //   @extend %text-adjust;
         // }
@@ -245,6 +287,8 @@ $section-background-colours: rgba(0, 0, 0, 0.1);
       #feat {
         @extend %margin-padding;
         background: $section-background-colours;
+        // width: 100%;
+
         // @extend %text-adjust;
         // background: rgba(0, 255, 255, 0.1);
 
